updates to tag stylings rounded corners shadings fixed missing background

--- a/themes/Bluebird/nyss_skin/tags/partials/_slideBox.scss
+++ b/themes/Bluebird/nyss_skin/tags/partials/_slideBox.scss
@@ -15,3 +15,9 @@
   z-index: 15;
   right:0px;
 }
+.label {
+  background-color:#ccc;
+  @include round-corners(5px);
+  color:#fff;
+  padding:4px;
+}
