--- a/themes/Bluebird/nyss_skin/tags/partials/_tokenHolder.scss
+++ b/themes/Bluebird/nyss_skin/tags/partials/_tokenHolder.scss
@@ -1,4 +1,6 @@
 .JSTree-tokenHolder {
+  background-color:#fff;
+  @include round-bottom-corners(3px);
   .JSTree-resize {
     background:url("/sites/default/themes/Bluebird/nyss_skin/images/icons-3e3e3e.png") no-repeat transparent -51px -229px;
     height:6px;
