--- a/themes/Bluebird/nyss_skin/tags/partials/_tree.scss
+++ b/themes/Bluebird/nyss_skin/tags/partials/_tree.scss
@@ -1,10 +1,17 @@
 .BBTree {
-  &.top-291-active {
+  background-color:#fff;
+  .tagContainer {
+    height:100%;
+  }
+  // &.top-291-active .top-291{
+  &.top-291-active{
     @include addColors($issueCodesColor,.3);
   }
-  &.top-296-active {
+  // &.top-296-active .top-296{
+  &.top-296-active{
     @include addColors($keywordsColor,.3);
   }
+  // &.top-292-acti/ve .top-292{
   &.top-292-active {
     @include addColors($positionsColor,.3);
   }
@@ -25,15 +32,31 @@
     &.open {
       display:block;
       position:absolute;
-      top:78px;
+      top:76px;
       width:438px;
       z-index:10;
       background-color:white;
       height: 150px;
     }
+    @include round-bottom-corners(3px);
   }
   &.hasSlideBox {
     @import "slideBox";
   }
+}
+.top-292 .position-box-text-reminder {
+  text-align: center;
+  font-style:italic;
+  padding-top: 20px;
+  font-size: 1.2em;
+
+}
+.JSTree-overlay {
+  background-color: #fff;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+  z-index: -1;
+  top: 0;
 }
 @import "tokenHolder";
