--- a/themes/Bluebird/nyss_skin/tags/tags.scss
+++ b/themes/Bluebird/nyss_skin/tags/tags.scss
@@ -5,14 +5,15 @@
 #JSTree-container.BBTreeContainer, #BBTreeContainer{
 	@import "utils/reset";
   width:$inputBoxWidthFull;
-	background-color:#fff;
+	// background-color:#fff;
 	overflow-x:hidden;
-	border:1px solid #ccc;
+	// border:1px solid #ccc;
 	cursor:default;
   position:relative;
   margin: 0 auto; 
 	// temp
 	margin:15px auto;
+  @include round-corners(3px);
 	// endtemp
   @import "partials/menu";
   @import "partials/tree";
